--- a/506Assignment2.qmd
+++ b/506Assignment2.qmd
@@ -7,15 +7,23 @@ format:
 editor: visual
 ---
 
-Github
+Github repository: [Github](https://github.com/AlanGalaxy/506A2)
 
-do file also on github
+.do file for Problem 3 is also available on github.
 
 ## Problem 1
 
 (a1)
 
 ```{r}
+#' Implement the die rolls using a loop
+#'
+#' @param num_dice: the number of dices to roll
+#'
+#' @return: the total winnings or loses
+#'
+#' @examples: > roll_loop(6)
+#'            [1] 0
 roll_loop <- function(num_dice) {
   balance <- num_dice * (-2)
   
@@ -37,7 +45,16 @@ roll_loop(6)
 (a2)
 
 ```{r}
+#' Implement the die rolls using built-in vectorized functions
+#'
+#' @param num_dice: the number of dices to roll
+#'
+#' @return: the total winnings or loses
+#'
+#' @examples: > roll_vectorized(6)
+#'            [1] 0
 roll_vectorized <- function(num_dice) {
+   # This time we need sampling with replacement.
   dices <- sample(1:6, num_dice, replace = TRUE)
   # print(dices)
   results <- ifelse(dices %in% c(2, 4, 6), yes = dices - 2, no = -2)
@@ -54,6 +71,14 @@ roll_vectorized(6)
 (a3)
 
 ```{r}
+#' Implement the die rolls using table() function
+#'
+#' @param num_dice: the number of dices to roll
+#'
+#' @return: the total winnings or loses
+#'
+#' @examples: > roll_table(6)
+#'            [1] 0
 roll_table <- function(num_dice) {
   dices <- sample(1:6, num_dice, replace = TRUE)
   # print(dices)
@@ -70,9 +95,25 @@ roll_table(6)
 (a4)
 
 ```{r}
+#' Implement the die rolls using one apply function
+#'
+#' @param num_dice: the number of dices to roll
+#'
+#' @return: the total winnings or loses
+#'
+#' @examples: > roll_apply(6)
+#'            [1] 0
 roll_apply <- function(num_dice) {
   dices <- sample(1:6, num_dice, replace = TRUE)
   # print(dices)
+  #' Calculate the balance of each dice
+  #'
+  #' @param dice: the number on each dice
+  #'
+  #' @return the winning or lose of each dice
+  #'
+  #' @examples: > calculate_balance(4)
+  #'            [1] 2
   calculate_balance <- function(dice) {
     if (dice %in% c(2, 4, 6)) {
       return(dice - 2)
@@ -81,8 +122,8 @@ roll_apply <- function(num_dice) {
     }
   }
   
-  each_roll_balance <- sapply(dices, calculate_balance)
-  balance <-sum(each_roll_balance)
+  each_dice_balance <- sapply(dices, calculate_balance)
+  balance <-sum(each_dice_balance)
   
   return(balance)
 }
@@ -94,6 +135,8 @@ roll_apply(6)
 \(b\)
 
 ```{r}
+#| code-fold: true
+#| code-summary: "Show the code"
 roll_loop(3)
 roll_loop(3000)
 
@@ -106,10 +149,14 @@ roll_table(3000)
 roll_apply(3)
 roll_apply(3000)
 ```
+
+The four functions work well.
 
 \(c\)
 
 ```{r}
+#| code-fold: true
+#| code-summary: "Show the code"
 set.seed(2)
 roll_loop(3)
 set.seed(2)
@@ -129,33 +176,55 @@ set.seed(2)
 roll_apply(3000)
 ```
 
+The four functions generate the same results.
+
 \(d\)
 
 ```{r}
+#| code-fold: true
+#| code-summary: "Show the code"
 library(microbenchmark)
 
 low <- 100
 large <- 10000
 
 benchmarks <- microbenchmark(
-  loop_low = roll_loop(low),
-  loop_large = roll_loop(large),
-  vectorized_low = roll_vectorized(low),
-  vectorized_large = roll_vectorized(large),
-  table_low = roll_table(low),
-  table_large = roll_table(large),
-  apply_low = roll_apply(low),
-  apply_large = roll_apply(large)
+  loop_low <- roll_loop(low),
+  loop_large <- roll_loop(large),
+  vectorized_low <- roll_vectorized(low),
+  vectorized_large <- roll_vectorized(large),
+  table_low <- roll_table(low),
+  table_large <- roll_table(large),
+  apply_low <- roll_apply(low),
+  apply_large <- roll_apply(large)
 )
 
 print(benchmarks)
 ```
+
+The function using vectorized function in R is the most efficient one. Loop function is the least efficient one.
+
+Comparing each function with low and large inputs:
+
+-   loop function is linear in input;
+
+-   vectorized function is still the most efficient one, but the lead is not as big as before;
+
+-   table function performs very well when the input is large;
+
+-   apply function is linear in input.
 
 \(e\)
 
 It's a fair game. The expectation is 0.
 
 ```{r}
+#' Monte Carlo simulation for the balance outcome
+#'
+#' @param num_simulations: number of simulations
+#' @param num_dices: number of dices in each simulation
+#'
+#' @return the outcomes of each simulation
 simulate <- function(num_simulations, num_dices) {
   results <- numeric(num_simulations)
   
@@ -175,20 +244,28 @@ mean_result <- mean(simulation_results)
 cat("The mean of results is:", mean_result)
 ```
 
+The result from Monte Carlo simulation is close to $0$, which indicates that this is a fair game.
+
 ## Problem 2
 
 \(a\)
 
+Import the data and rename the columns.
+
 ```{r}
+#| code-fold: true
+#| code-summary: "Show the code"
 cars <- read.csv("D:/Code/R/cars.csv", header = TRUE)
 
 names(cars) <- c("height", "length", "width", "driveline", "type", 
-                 "hybrid", "num_gear", "transmission", "city_mpg", "fuel_type", 
-                 "highway_mpg", "classification", "ID", "make", "model_year", 
-                 "year", "horsepower", "torque")
+                 "hybrid", "num_gear", "transmission", "city_mpg", 
+                 "fuel_type", "highway_mpg", "classification", "ID", 
+                 "make", "model_year", "year", "horsepower", "torque")
 ```
 
 \(b\)
+
+Restrict the data to the cars whose fuel type is "Gasoline".
 
 ```{r}
 cars <- cars[cars$fuel_type == "Gasoline", ]
@@ -196,34 +273,56 @@ cars <- cars[cars$fuel_type == "Gasoline", ]
 
 \(c\)
 
+Fit the model.
+
 ```{r}
+#| code-fold: true
+#| code-summary: "Show the code"
 cars$year <- as.factor(cars$year)
 
-model <- lm(highway_mpg ~ horsepower + torque + length + width + height + year, data = cars)
+model <- lm(highway_mpg ~ horsepower + torque + length + width + height +
+              year, data = cars)
 
 summary(model)
 ```
 
-The coefficient of horsepower is 0.0163556, with standard error 0.0022772. This means that the higher the horsepower is, the higher highway mpg will be. The t statistic is 7.182 with p-value 7.96e-13. This means that the coefficient of horsepower is significantly different from 0.
+The coefficient of horsepower is 0.0163556, with standard error 0.0022772. This means that the higher the horsepower is, the higher highway mpg will be. The t statistic is 7.182 with p-value 7.96e-13. This means that the coefficient of horsepower is significantly different from 0. The other parameters whose significant level are less than 0.05 is "torque" and "height".
 
 \(d\)
 
+Calculate the values for predictors.
+
 ```{r}
+#| code-fold: true
+#| code-summary: "Show the code"
+# Use median of year as value of year
 cars$year <- as.numeric(as.character(cars$year))
 year_value <- median(cars$year)
+year_value <- factor(year_value, levels = c(2009, 2010, 2011, 2012))
+cars$year <- as.factor(cars$year)
+# Use median of length, width and height as value of length, width and height.
 length_value <- median(cars$length)
 width_value <- median(cars$width)
 height_value <- median(cars$height)
-year_value <- factor(2011, levels = c(2009, 2010, 2011, 2012))
-cars$year <- as.factor(cars$year)
+# Use the lower quantile, median and upper quantile as the three values 
+# for torque.
 horsepower_values <- seq(100, 600, by = 50)
 torque_values <- c(185, 263, 317)
+```
 
-interaction_model <- lm(highway_mpg ~ horsepower * torque + length + width + height + year, data = cars)
+Fit the model, calculate the predicted response data and plot the interaction plot.
+
+```{r}
+#| code-fold: true
+#| code-summary: "Show the code"
+interaction_model <- lm(highway_mpg ~ horsepower * torque + length + 
+                          width + height + year, data = cars)
+summary(interaction_model)
 
 interaction_data <- expand.grid(horsepower = horsepower_values, 
-                                torque = torque_values, length = length_value, 
-                                width = width_value, height = height_value, year = year_value)
+                                torque = torque_values, length = length_value,
+                                width = width_value, height = height_value, 
+                                year = year_value)
 
 interaction_data$highway_mpg <- predict(interaction_model, 
                                         newdata = interaction_data)
@@ -240,17 +339,21 @@ interaction_plot <- interaction.plot(
 )
 ```
 
-Choose the quantile as the three values for torque.
+Choose the lower quantile, median and upper quantile as the three values for torque.
 
 Choose the median of year as the year value.The three lines have crosses between them, so there is interaction between horsepower and torque.
 
 \(e\)
 
+Calculate $\beta$ manually.
+
 ```{r}
-X <- cbind(1, cars$horsepower, cars$torque, cars$length, cars$width, cars$height, 
-           cars$year == 2010, cars$year == 2011, cars$year == 2012, cars$horsepower * cars$torque)
-
-
+#| code-fold: true
+#| code-summary: "Show the code"
+# Create X and Y matrix
+X <- cbind(1, cars$horsepower, cars$torque, cars$length, cars$width,  
+           cars$height, cars$year == 2010, cars$year == 2011, 
+           cars$year == 2012, cars$horsepower * cars$torque)
 
 Y <- cars$highway_mpg
 
@@ -258,18 +361,15 @@ beta_hat <- solve(t(X) %*% X) %*% t(X) %*% Y
 beta_hat
 ```
 
+The output's order is parameters for horsepower, torque, length, width, height, year2010, year2011, year2012, horsepower\*torque. The results are the same as in (d)
+
 ## Problem 3
 
 Import the data from csv file.
 
 ``` stata
 . cd /Users/sunjiaqi/Downloads
-/Users/sunjiaqi/Downloads
-
-. 
-end of do-file
-
-. do "/var/folders/sf/41rm48gd50qgvw3g2vfw3fk40000gr/T//SD26236.000000"
+C:\Users\sunjiaqi\Downloads
 
 . import delimited using cars.csv
 (encoding automatically selected: ISO-8859-1)
@@ -281,7 +381,7 @@ end of do-file
 
 \(a\)
 
-rename the columns
+Rename the columns.
 
 ``` stata
 
@@ -327,7 +427,7 @@ end of do-file
 
 \(b\)
 
-keep the rows whose fuel type is Gasoline
+Keep the rows whose fuel type is Gasoline
 
 ``` stata
 . keep if fuel_type == "Gasoline"
@@ -339,7 +439,7 @@ end of do-file
 
 \(c\)
 
-regression, the year is a level factor. The results are the same as in R.
+Regression, the year is a level factor. The results are the same as in R.
 
 ``` stata
 . regress highway_mpg c.horsepower c.torque c.height c.length c.width i.year
@@ -377,26 +477,34 @@ end of do-file
 Regress on the interaction
 
 ``` stata
-. regress highway_mpg c.horsepower##c.torque c.year
+. regress highway_mpg c.horsepower##c.torque c.length c.width c.height i.year
 
       Source |       SS           df       MS      Number of obs   =     4,591
--------------+----------------------------------   F(4, 4586)      =   1053.75
-       Model |  80027.3394         4  20006.8349   Prob > F        =    0.0000
-    Residual |  87071.6281     4,586  18.9863995   R-squared       =    0.4789
--------------+----------------------------------   Adj R-squared   =    0.4785
-       Total |  167098.968     4,590  36.4050038   Root MSE        =    4.3573
+-------------+----------------------------------   F(9, 4581)      =    480.07
+       Model |  81105.8715         9  9011.76351   Prob > F        =    0.0000
+    Residual |   85993.096     4,581  18.7716865   R-squared       =    0.4854
+-------------+----------------------------------   Adj R-squared   =    0.4844
+       Total |  167098.968     4,590  36.4050038   Root MSE        =    4.3326
 
 -------------------------------------------------------------------------------
   highway_mpg | Coefficient  Std. err.      t    P>|t|     [95% conf. interval]
 --------------+----------------------------------------------------------------
-   horsepower |  -.0159678   .0024684    -6.47   0.000    -.0208071   -.0111284
-       torque |  -.0894708    .002462   -36.34   0.000    -.0942975    -.084644
+   horsepower |  -.0166633   .0025388    -6.56   0.000    -.0216406    -.011686
+       torque |  -.0860593   .0025333   -33.97   0.000    -.0910257   -.0810928
               |
  c.horsepower#|
-     c.torque |   .0001158   4.61e-06    25.09   0.000     .0001067    .0001248
+     c.torque |   .0001124   4.63e-06    24.28   0.000     .0001033    .0001214
               |
-         year |   .8168134   .0817223     9.99   0.000     .6565983    .9770285
-        _cons |  -1598.715   164.3332    -9.73   0.000    -1920.887   -1276.543
+       length |   .0017767   .0008318     2.14   0.033     .0001459    .0034075
+        width |  -.0011694   .0008521    -1.37   0.170      -.00284    .0005011
+       height |   .0065604   .0010696     6.13   0.000     .0044634    .0086573
+              |
+         year |
+        2010  |  -.5627858   .6371716    -0.88   0.377    -1.811949    .6863777
+        2011  |   .0725356   .6361142     0.11   0.909    -1.174555    1.319626
+        2012  |   1.197033   .6411085     1.87   0.062    -.0598488    2.453915
+              |
+        _cons |   42.18795   .7930274    53.20   0.000     40.63323    43.74266
 -------------------------------------------------------------------------------
 
 . 
@@ -406,8 +514,9 @@ end of do-file
 Plot the interaction plot. Use median of year 2011 as the value of year. Use lower quantile, median and upper quantile as the values of torque. Use 100 150 200 ...... 600 as the values of horsepower. We obtain the same plot as in R.
 
 ``` stata
-. margins, at(horsepower=(100(50)600) torque=(185 263 317) year=2011) plot(ytitle("Highway mpg") xtit
-> le("Horsepower") title("Interaction Plot"))
+. margins, at(horsepower=(100(50)600) torque=(185 263 317) height=155 length=129 wid
+> th=143 year=2011) plot(ytitle("Highway mpg") xtitle("Horsepower") title("Interacti
+> on Plot"))
 
 Adjusted predictions                                     Number of obs = 4,591
 Model VCE: OLS
@@ -415,102 +524,201 @@ Model VCE: OLS
 Expression: Linear prediction, predict()
 1._at:  horsepower =  100
         torque     =  185
+        length     =  129
+        width      =  143
+        height     =  155
         year       = 2011
 2._at:  horsepower =  100
         torque     =  263
+        length     =  129
+        width      =  143
+        height     =  155
         year       = 2011
 3._at:  horsepower =  100
         torque     =  317
+        length     =  129
+        width      =  143
+        height     =  155
         year       = 2011
 4._at:  horsepower =  150
         torque     =  185
+        length     =  129
+        width      =  143
+        height     =  155
         year       = 2011
 5._at:  horsepower =  150
         torque     =  263
+        length     =  129
+        width      =  143
+        height     =  155
         year       = 2011
 6._at:  horsepower =  150
         torque     =  317
+        length     =  129
+        width      =  143
+        height     =  155
         year       = 2011
 7._at:  horsepower =  200
         torque     =  185
+        length     =  129
+        width      =  143
+        height     =  155
         year       = 2011
 8._at:  horsepower =  200
         torque     =  263
+        length     =  129
+        width      =  143
+        height     =  155
         year       = 2011
 9._at:  horsepower =  200
         torque     =  317
+        length     =  129
+        width      =  143
+        height     =  155
         year       = 2011
 10._at: horsepower =  250
         torque     =  185
+        length     =  129
+        width      =  143
+        height     =  155
         year       = 2011
 11._at: horsepower =  250
         torque     =  263
+        length     =  129
+        width      =  143
+        height     =  155
         year       = 2011
 12._at: horsepower =  250
         torque     =  317
+        length     =  129
+        width      =  143
+        height     =  155
         year       = 2011
 13._at: horsepower =  300
         torque     =  185
+        length     =  129
+        width      =  143
+        height     =  155
         year       = 2011
 14._at: horsepower =  300
         torque     =  263
+        length     =  129
+        width      =  143
+        height     =  155
         year       = 2011
 15._at: horsepower =  300
         torque     =  317
+        length     =  129
+        width      =  143
+        height     =  155
         year       = 2011
 16._at: horsepower =  350
         torque     =  185
+        length     =  129
+        width      =  143
+        height     =  155
         year       = 2011
 17._at: horsepower =  350
         torque     =  263
+        length     =  129
+        width      =  143
+        height     =  155
         year       = 2011
 18._at: horsepower =  350
         torque     =  317
+        length     =  129
+        width      =  143
+        height     =  155
         year       = 2011
 19._at: horsepower =  400
         torque     =  185
+        length     =  129
+        width      =  143
+        height     =  155
         year       = 2011
 20._at: horsepower =  400
         torque     =  263
+        length     =  129
+        width      =  143
+        height     =  155
         year       = 2011
 21._at: horsepower =  400
         torque     =  317
+        length     =  129
+        width      =  143
+        height     =  155
         year       = 2011
 22._at: horsepower =  450
         torque     =  185
+        length     =  129
+        width      =  143
+        height     =  155
         year       = 2011
 23._at: horsepower =  450
         torque     =  263
+        length     =  129
+        width      =  143
+        height     =  155
         year       = 2011
 24._at: horsepower =  450
         torque     =  317
+        length     =  129
+        width      =  143
+        height     =  155
         year       = 2011
 25._at: horsepower =  500
         torque     =  185
+        length     =  129
+        width      =  143
+        height     =  155
         year       = 2011
 26._at: horsepower =  500
         torque     =  263
+        length     =  129
+        width      =  143
+        height     =  155
         year       = 2011
 27._at: horsepower =  500
         torque     =  317
+        length     =  129
+        width      =  143
+        height     =  155
         year       = 2011
 28._at: horsepower =  550
         torque     =  185
+        length     =  129
+        width      =  143
+        height     =  155
         year       = 2011
 29._at: horsepower =  550
         torque     =  263
+        length     =  129
+        width      =  143
+        height     =  155
         year       = 2011
 30._at: horsepower =  550
         torque     =  317
+        length     =  129
+        width      =  143
+        height     =  155
         year       = 2011
 31._at: horsepower =  600
         torque     =  185
+        length     =  129
+        width      =  143
+        height     =  155
         year       = 2011
 32._at: horsepower =  600
         torque     =  263
+        length     =  129
+        width      =  143
+        height     =  155
         year       = 2011
 33._at: horsepower =  600
         torque     =  317
+        length     =  129
+        width      =  143
+        height     =  155
         year       = 2011
 
 ------------------------------------------------------------------------------
@@ -518,39 +726,39 @@ Expression: Linear prediction, predict()
              |     Margin   std. err.      t    P>|t|     [95% conf. interval]
 -------------+----------------------------------------------------------------
          _at |
-          1  |   27.88981   .2172147   128.40   0.000     27.46397    28.31566
-          2  |   21.81425   .3463041    62.99   0.000     21.13532    22.49317
-          3  |   17.60809    .453299    38.84   0.000      16.7194    18.49677
-          4  |   28.16247   .1260736   223.38   0.000     27.91531    28.40964
-          5  |   22.53848   .2463243    91.50   0.000     22.05557     23.0214
-          6  |   18.64495   .3521376    52.95   0.000     17.95459    19.33531
-          7  |   28.43513    .085066   334.27   0.000     28.26836     28.6019
-          8  |   23.26272   .1514393   153.61   0.000     22.96582    23.55961
-          9  |   19.68182   .2530099    77.79   0.000      19.1858    20.17784
-         10  |   28.70779   .1456271   197.13   0.000     28.42229    28.99329
-         11  |   23.98695   .0818605   293.02   0.000     23.82647    24.14744
-         12  |   20.71868   .1597479   129.70   0.000      20.4055    21.03187
-         13  |   28.98045   .2404323   120.53   0.000     28.50909    29.45181
-         14  |   24.71119   .1094416   225.79   0.000     24.49663    24.92575
-         15  |   21.75555   .0922876   235.74   0.000     21.57462    21.93648
-         16  |   29.25311   .3421074    85.51   0.000     28.58241     29.9238
-         17  |   25.43542   .1968829   129.19   0.000     25.04944    25.82141
-         18  |   22.79241   .1140476   199.85   0.000     22.56883      23.016
-         19  |   29.52577   .4459783    66.20   0.000     28.65143     30.4001
-         20  |   26.15966   .2950548    88.66   0.000     25.58121    26.73811
-         21  |   23.82928   .1974562   120.68   0.000     23.44217    24.21639
-         22  |   29.79843   .5508041    54.10   0.000     28.71858    30.87827
-         23  |    26.8839   .3960566    67.88   0.000     26.10743    27.66036
-         24  |   24.86615   .2940465    84.57   0.000     24.28967    25.44262
-         25  |   30.07108   .6561273    45.83   0.000     28.78476    31.35741
-         26  |   27.60813   .4981701    55.42   0.000     26.63148    28.58479
-         27  |   25.90301    .394246    65.70   0.000      25.1301    26.67592
-         28  |   30.34374   .7617416    39.83   0.000     28.85036    31.83712
-         29  |   28.33237   .6008286    47.16   0.000     27.15445    29.51028
-         30  |   26.93988   .4958717    54.33   0.000     25.96773    27.91202
-         31  |    30.6164   .8675407    35.29   0.000     28.91561     32.3172
-         32  |    29.0566   .7037938    41.29   0.000     27.67683    30.43638
-         33  |   27.97674   .5981972    46.77   0.000     26.80399     29.1495
+          1  |   27.83061   .2351856   118.33   0.000     27.36953    28.29169
+          2  |   21.99437   .3647513    60.30   0.000     21.27928    22.70946
+          3  |    17.9539   .4738445    37.89   0.000     17.02493    18.88286
+          4  |   28.03675   .1503217   186.51   0.000     27.74204    28.33145
+          5  |    22.6387   .2645193    85.58   0.000     22.12011    23.15728
+          6  |   18.90158   .3708746    50.96   0.000     18.17449    19.62868
+          7  |   28.24288   .1188619   237.61   0.000     28.00985    28.47591
+          8  |   23.28302    .173139   134.48   0.000     22.94358    23.62246
+          9  |   19.84927   .2712973    73.16   0.000      19.3174    20.38114
+         10  |   28.44901   .1729363   164.51   0.000     28.10997    28.78805
+         11  |   23.92734   .1142953   209.35   0.000     23.70327    24.15142
+         12  |   20.79696   .1808072   115.02   0.000     20.44249    21.15143
+         13  |   28.65515   .2644485   108.36   0.000      28.1367    29.17359
+         14  |   24.57167   .1386701   177.20   0.000     24.29981    24.84353
+         15  |   21.74465   .1217175   178.65   0.000     21.50602    21.98327
+         16  |   28.86128   .3663418    78.78   0.000     28.14307    29.57948
+         17  |   25.21599   .2201705   114.53   0.000     24.78435    25.64763
+         18  |   22.69233   .1413289   160.56   0.000     22.41526    22.96941
+         19  |   29.06741   .4719395    61.59   0.000     28.14218    29.99264
+         20  |   25.86032   .3174908    81.45   0.000     25.23788    26.48275
+         21  |   23.64002   .2194708   107.71   0.000     23.20975    24.07029
+         22  |   29.27354    .579219    50.54   0.000       28.138    30.40909
+         23  |   26.50464   .4197683    63.14   0.000     25.68169    27.32759
+         24  |   24.58771    .315271    77.99   0.000     23.96963    25.20579
+         25  |   29.47968   .6873934    42.89   0.000     28.13206     30.8273
+         26  |   27.14897   .5241088    51.80   0.000     26.12146    28.17647
+         27  |    25.5354   .4167242    61.28   0.000     24.71842    26.35238
+         28  |   29.68581    .796098    37.29   0.000     28.12508    31.24655
+         29  |   27.79329   .6294874    44.15   0.000     26.55919    29.02739
+         30  |   26.48308   .5205354    50.88   0.000     25.46258    27.50358
+         31  |   29.89194   .9051417    33.02   0.000     28.11743    31.66646
+         32  |   28.43762    .735458    38.67   0.000     26.99576    29.87947
+         33  |   27.43077   .6255318    43.85   0.000     26.20443    28.65712
 ------------------------------------------------------------------------------
 
 Variables that uniquely identify margins: horsepower torque
@@ -569,45 +777,80 @@ file /Users/sunjiaqi/Downloads/Graph.png saved as PNG format
 end of do-file
 ```
 
-![](images/Graph.png)
+![](images/Graph-2.png)
 
 \(e\)
 
 Create two matrices containing predictors $X$ and response $y$.
 
 ``` stata
-. matrix X = J(4591, 5, .)
+. matrix X = J(4591, 10, .)
 
 . matrix y = J(4591, 1, .)
 
-. forval i = 1/4591 {
-  2.     matrix X[`i', 1] = horsepower[`i']
-  3.         matrix X[`i', 2] = torque[`i']
-  4.         matrix X[`i', 3] = horsepower[`i'] * torque[`i']
-  5.         matrix X[`i', 4] = year[`i']
-  6.         matrix X[`i', 5] = 1
-  7.         matrix y[`i', 1] = highway_mpg[`i']
-  8. }
+. generate year2010 = 1 if year == 2010
+(2,958 missing values generated)
+
+. generate year2011 = 1 if year == 2011
+(2,797 missing values generated)
+
+. generate year2012 = 1 if year == 2012
+(3,475 missing values generated)
+
+. replace year2010 = 0 if missing(year2010)
+(2,958 real changes made)
+
+. replace year2011 = 0 if missing(year2011)
+(2,797 real changes made)
+
+. replace year2012 = 0 if missing(year2012)
+(3,475 real changes made)
 
 . 
 end of do-file
 ```
 
-Calculate the $\beta$. The results are the same as in (d)
+Calculate the $\beta$.
+
+```         
+. forval i = 1/4591 {
+  2.     matrix X[`i', 1] = horsepower[`i']
+  3.         matrix X[`i', 2] = torque[`i']
+  4.         matrix X[`i', 3] = horsepower[`i'] * torque[`i']
+  5.         matrix X[`i', 4] = length[`i']
+  6.         matrix X[`i', 5] = width[`i']
+  7.         matrix X[`i', 6] = height[`i']
+  8.         matrix X[`i', 7] = year2010[`i']
+  9.         matrix X[`i', 8] = year2011[`i']
+ 10.         matrix X[`i', 9] = year2012[`i']
+ 11.         matrix X[`i', 10] = 1
+ 12.         matrix y[`i', 1] = highway_mpg[`i']
+ 13. }
+
+. 
+end of do-file
+```
 
 ``` stata
 . matrix b = inv(X' * X) * X' * y
 
 . matrix list b
 
-b[5,1]
-            c1
-c1  -.01596776
-c2  -.08947076
-c3   .00011579
-c4   .81681341
-c5  -1598.7152
+b[10,1]
+             c1
+ c1  -.01666332
+ c2  -.08605927
+ c3   .00011236
+ c4   .00177672
+ c5  -.00116945
+ c6   .00656039
+ c7  -.56278578
+ c8   .07253564
+ c9    1.197033
+c10   42.187948
 
 . 
 end of do-file
 ```
+
+The results are the same as in (d).
